
 
* register cleanIndexes setup widget in portal_migration to remove wrongly
  indexed software.
  [gotcha]

* fix indexing : software elements like layout registry, viewlet registry,
  layouts, viewlets, composite container and elements are not indexed
  anymore.
  [gotcha]

* fix SearchableText at creation time
  [gotcha]

* fix package so that it can load when ATContentTypes is not installed
  [gotcha]
